@@ -3,6 +3,7 @@ Version 1.7 (unreleased)
   Please stop use it as it will disappear in v2.0!
   Use standard AC_CHECK_FUNCS autoconf tests or pkg-config instead.
 - Read PKCS#12 blob as binary file, fixes self-tests under Mingw.
+- Fix use of __attribute__ ((deprecated)) to work on non-GCC (#106548).
 
 Version 1.6 (released 2008-11-10)
 - Fixed namespace violation for MAX_NAME_SIZE and MAX_ERROR_DESCRIPTION_SIZE.
